[tool.poetry]
name = "cluster"
version = "0.1.0"
description = ""
authors = ["c-Tos1wa <cristoshiwassaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.2.2"
jupyterlab = "^4.0.2"
matplotlib = "^3.7.1"
scipy = [
        {version = "^1.10.1", python = "<3.12,>=3.8"}
    ]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
